--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -121,11 +121,20 @@ body {
     box-shadow: 0 2px 12px rgba(#000000, .3);
   }
 
+  &.open {
+    .user__albums {
+      display: block;
+    }
+
+    .user__btn-toggle {
+      transform: rotate(180deg);
+    }
+  }
+
   &__main {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 2rem;
   }
 
   &__title {
@@ -138,6 +147,9 @@ body {
   }
 
   &__albums {
+    display: none;
+    margin-top: 2rem;
+
     &-title {
       margin: 0 0 1rem;
       font-size: 1.5rem;
@@ -155,6 +167,16 @@ body {
 
 .album {
 
+  &.open {
+    .album__gallery {
+      display: grid;
+    }
+
+    .album__btn-toggle {
+      transform: rotate(180deg);
+    }
+  }
+
   &__main {
     display: flex;
     align-items: center;
@@ -166,7 +188,7 @@ body {
   }
 
   &__gallery {
-    display: grid;
+    display: none;
     grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
     padding-top: 1rem;
     gap: 0.75rem;
