--- a/src/css/style.css
+++ b/src/css/style.css
@@ -489,4 +489,77 @@ body {
           filter: grayscale(0%);
   opacity: 1;
 }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+}
+
+.popup {
+  position: relative;
+  width: 100%;
+  max-width: 40rem;
+  max-height: 90vh;
+  padding: 1rem;
+  background: var(--color-white);
+  -webkit-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+}
+
+.popup > img {
+  width: 100%;
+  height: 100%;
+}
+
+.popup__btn-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  -webkit-transform: translate(40%, -40%);
+          transform: translate(40%, -40%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 3rem;
+  height: 3rem;
+  font-weight: 600;
+  background: var(--color-white);
+  border: 0;
+  border-radius: 0;
+  -webkit-transition: opacity .3s;
+  transition: opacity .3s;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
+}
+
+.popup__btn-close:hover, .popup__btn-close:active {
+  opacity: 0.8;
+}
+
+.popup__btn-close:focus {
+  outline: 2px dashed var(--color-black);
+  outline-offset: 2px;
+}
 /*# sourceMappingURL=style.css.map */
