--- a/src/css/style.css
+++ b/src/css/style.css
@@ -479,6 +479,10 @@ body {
           filter: grayscale(100%);
 }
 
+.photo__btn-favorite--static {
+  position: static;
+}
+
 .photo__btn-favorite:hover, .photo__btn-favorite:active {
   opacity: 0.8;
 }
@@ -486,6 +490,12 @@ body {
 .photo__btn-favorite:focus {
   outline: 2px dashed var(--color-black);
   outline-offset: 2px;
+}
+
+.photo__btn-favorite.active {
+  -webkit-filter: grayscale(0%);
+          filter: grayscale(0%);
+  opacity: 1;
 }
 
 .photo.favorite .photo__btn-favorite {
